improve tile layout

--- a/src/Launch/launch.scss
+++ b/src/Launch/launch.scss
@@ -23,7 +23,6 @@
   display: flex;
   justify-content: center;
   overflow: hidden;
-  padding-top: 20px;
 }
 
 .title-icon-container {
@@ -43,7 +42,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  padding: 0 10px 10px;
+  padding: 20px 10px 10px;
   text-decoration: none;
   width: 100%;
 }
