--- a/src/tab/src/settings/settings.scss
+++ b/src/tab/src/settings/settings.scss
@@ -1,3 +1,23 @@
+@import '../variables.scss';
+
+.activator-container {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.activator {
+  color: $color-tile-background;
+  cursor: pointer;
+  font-size: 3em;
+  opacity: 0.2;
+  transition: $transition;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
 .links {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
