--- a/src/tab/src/settings/settings.scss
+++ b/src/tab/src/settings/settings.scss
@@ -22,6 +22,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   margin: 10px;
+  overflow: auto;
 }
 
 .link-column {
@@ -31,4 +32,37 @@
   &.mod-icon {
     min-width: 300px;
   }
+}
+
+.modal {
+  background-color: $color-tile-background;
+  border-radius: 6px;
+  display: flex;
+  left: 50%;
+  max-height: 80vh;
+  max-width: 80vw;
+  min-height: 80vh;
+  // min-width: 80vw;
+  padding: 20px;
+  position: fixed;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1010;
+}
+
+.modal-overlay {
+  background-color: $color-background;
+  height: 100%;
+  left: 0;
+  opacity: 0.8;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+.settings {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
