--- a/src/tab/src/tiles/tiles.scss
+++ b/src/tab/src/tiles/tiles.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, $tileWidth);
   justify-content: center;
-  padding: 24px 24px 36px;
+  padding: 2em 4em 3em;
   transition: $transition;
 
   &.mod-disabled {
