--- a/src/main/src/app/layout/button.scss
+++ b/src/main/src/app/layout/button.scss
@@ -1,23 +1,22 @@
+@import '../variables.scss';
+
 .button {
   -webkit-appearance: button;
   -webkit-writing-mode: horizontal-tb !important;
   align-items: flex-start;
-  background-color: buttonface;
-  border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
+  background-color: $color-button-default;
+  border: 1px solid $color-border;
   border-image: initial;
-  border-radius: 6px;
-  border-style: solid;
-  border-width: 1px;
+  border-radius: $border-radius;
   box-sizing: border-box;
   color: buttontext;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.25em;
   font-weight: bold;
-  font: 400 11px system-ui;
+  font: 600 1em system-ui;
   letter-spacing: normal;
   margin: 0em;
-  min-width: 100px;
+  min-width: 110px;
   padding: 10px;
   text-align: center;
   text-indent: 0px;
@@ -25,4 +24,22 @@
   text-shadow: none;
   text-transform: none;
   word-spacing: normal;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:hover {
+    background-color: darken($color-button-default, 5%);
+  }
+
+  &.mod-primary {
+    color: white;
+    background-color: $color-button-primary;
+    border: none;
+
+    &:hover {
+      background-color: darken($color-button-primary, 5%);
+    }
+  }
 }
