--- a/src/main/src/app/settings/settings.scss
+++ b/src/main/src/app/settings/settings.scss
@@ -22,25 +22,12 @@
   }
 }
 
-.link-configs {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.link-config {
-  padding: 4px;
-  white-space: nowrap;
-
-  &.mod-image {
-    min-width: 300px;
-  }
-}
-
 .modal {
   background-color: $color-tile-background;
   border-radius: 6px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   left: 50%;
   max-height: 80vh;
   max-width: 80vw;
@@ -56,7 +43,12 @@
 .modal-body {
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  justify-content: space-between;
+  min-height: 0;
+
+  .input-label {
+    width: 130px;
+  }
 }
 
 .modal-footer {
@@ -78,5 +70,47 @@
 
   &.mod-clickable {
     cursor: pointer;
+  }
+}
+
+.tile-images {
+  border-bottom: 1px solid $color-border;
+  border-top: 1px solid $color-border;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-bottom: 20px;
+  overflow: auto;
+}
+
+.tile-info {
+  align-items: center;
+  display: flex;
+  white-space: nowrap;
+
+  &.mod-even {
+    background-color: $color-row-even;
+  }
+
+  &.mod-image {
+    min-width: 300px;
+  }
+
+  &.mod-title {
+    padding-left: 10px;
+  }
+
+  .text-input {
+    background-color: transparent;
+    border-radius: 0;
+    border: 1px solid transparent;
+
+    &:focus {
+      background-color: white;
+      border-color: $color-border-focus;
+    }
+
+    &:hover {
+      border-color: $color-border-focus;
+    }
   }
 }
