--- a/src/main/src/app/tiles/tiles.scss
+++ b/src/main/src/app/tiles/tiles.scss
@@ -60,7 +60,7 @@
 
 .tile-link {
   background-color: $color-tile-background;
-  border-radius: 4px;
+  border-radius: $border-radius;
   display: flex;
   flex-direction: column;
   padding: 10px;
