--- a/src/main/src/app/layout/input.scss
+++ b/src/main/src/app/layout/input.scss
@@ -27,6 +27,10 @@
     padding: 10px;
   }
 
+  &:hover {
+    border-color: $color-border-focus;
+  }
+
   &:focus {
     border-color: $color-border-focus;
     outline: none;
