--- a/src/main/src/app/settings/settings.scss
+++ b/src/main/src/app/settings/settings.scss
@@ -1,5 +1,10 @@
 @import '../variables.scss';
 
+.button-close {
+  min-width: 40px;
+
+}
+
 .button-toggle-container {
   position: absolute;
   top: 10px;
@@ -53,10 +58,21 @@
 
 .modal-footer {
   align-items: center;
-  border-top: 1px solid $color-border;
   display: flex;
   justify-content: space-between;
   padding: 20px;
+}
+
+.modal-header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 20px 0;
+
+  .label-title {
+    margin: 0;
+    padding: 10px 0 0;
+  }
 }
 
 .modal-overlay {
