--- a/src/main/src/app/app.scss
+++ b/src/main/src/app/app.scss
@@ -32,3 +32,9 @@ html {
   font-weight: bold;
   padding: 10px;
 }
+
+.truncate-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
