wip better markup

--- a/src/main/src/app/layout/button.scss
+++ b/src/main/src/app/layout/button.scss
@@ -44,7 +44,8 @@
   }
 
   &.mod-icon-only {
-    font-size: 1.5em;
+    border-radius: 50%;
+    font-size: $font-icon-size;
     min-width: unset;
     width: $row-height;
   }
