--- a/src/main/src/app/settings/settings.scss
+++ b/src/main/src/app/settings/settings.scss
@@ -136,7 +136,7 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  padding: 20px 20px 0;
+  padding: 18px 20px 0;
 
   .label-title {
     margin: 0;
@@ -175,5 +175,9 @@
 
   &.mod-other {
     margin-top: 10px;
+
+    .checkbox-input-icon-container {
+      padding-right: 20px;
+    }
   }
 }
