--- a/src/main/src/app/variables.scss
+++ b/src/main/src/app/variables.scss
@@ -12,6 +12,8 @@ $button-default-color: lighten($border-color, 10%);
 $button-primary-border-color: darken(#408BF9, 20%);
 $button-primary-color: #408BF9;
 
+$font-icon-size: 1.5em;
+
 $label-color: black;
 
 $row-even-color: lighten($border-color, 10%);
