--- a/src/main/src/app/app.scss
+++ b/src/main/src/app/app.scss
@@ -27,10 +27,15 @@ html {
   }
 }
 
+.input-container {
+  height: $row-height;
+}
+
 .label {
   color: $label-color;
   font-weight: bold;
   padding: 10px;
+  white-space: nowrap;
 }
 
 .truncate-text {
