--- a/src/main/src/app/layout/input.scss
+++ b/src/main/src/app/layout/input.scss
@@ -1,24 +1,40 @@
 @import '../variables.scss';
 
-.checkbox-label {
-  cursor: pointer;
-  padding: 8px 0;
-}
-
-.checkbox-input {
-  cursor: pointer;
-  margin: 0;
-}
-
 .input-container {
   align-items: center;
   display: flex;
+
+  .checked-icon {
+    align-items: center;
+    color: $border-color;
+    display: flex;
+    font-size: $font-icon-size;
+    height: $row-height;
+    justify-content: center;
+
+    &.mod-checked {
+      color: $button-primary-color;
+    }
+
+    &.mod-unchecked {
+      border: 1px solid $border-color;
+      border-radius: 50%;
+      height: calc(1em - 2px);
+      width: calc(1em - 2px);
+
+      &:hover {
+        border-color: $border-hover-color;
+      }
+    }
+  }
 }
 
 .input {
+  align-items: center;
+  display: flex;
   transition: $util-transition;
 
-  &:not(.checkbox-input) {
+  &:not(.mod-checkbox) {
     border-radius: $border-radius;
     border: $border-default;
     flex: 1;
@@ -37,7 +53,12 @@
     outline: none;
   }
 
-  &.checkbox-input {
+  &.mod-checkbox {
     display: none;
+  }
+
+  &.mod-checkbox {
+    cursor: pointer;
+    margin: 0;
   }
 }
