--- a/src/main/src/app/layout/input.scss
+++ b/src/main/src/app/layout/input.scss
@@ -4,6 +4,16 @@
   align-items: center;
   display: flex;
 
+  &.mod-checkbox {
+    &:hover {
+      .checked-icon {
+        &.mod-unchecked {
+          border-color: $border-hover-color;
+        }
+      }
+    }
+  }
+
   .checked-icon {
     align-items: center;
     color: $border-color;
@@ -17,14 +27,10 @@
     }
 
     &.mod-unchecked {
-      border: 1px solid $border-color;
+      border: 2px solid $border-color;
       border-radius: 50%;
-      height: calc(1em - 2px);
-      width: calc(1em - 2px);
-
-      &:hover {
-        border-color: $border-hover-color;
-      }
+      height: calc(1em - 4px);
+      width: calc(1em - 4px);
     }
   }
 }
