--- a/src/main/src/app/layout/button.scss
+++ b/src/main/src/app/layout/button.scss
@@ -19,7 +19,7 @@
   justify-content: center;
   letter-spacing: normal;
   margin: 0;
-  min-width: 116px;
+  min-width: $button-width;
   padding: 0;
   text-align: center;
   text-indent: 0px;
