--- a/src/main/src/app/settings/settings.scss
+++ b/src/main/src/app/settings/settings.scss
@@ -22,80 +22,6 @@
   }
 }
 
-.cell {
-  align-items: center;
-  display: flex;
-  padding: 0 10px;
-
-  .input {
-    padding: 0 10px;
-
-    &.mod-text {
-      background-color: transparent;
-      border-color: transparent;
-      border-radius: 0;
-
-      &:hover {
-        border-color: $border-hover-color;
-      }
-
-      &:focus {
-        background-color: white;
-        border-color: $border-focus-color;
-      }
-    }
-  }
-
-  &.mod-even {
-    background-color: $row-even-color;
-  }
-
-  &.mod-image {
-    min-width: 350px;
-    padding: 0;
-  }
-
-  &.mod-title {
-    padding-left: 10px;
-
-    .cell-text {
-      max-width: 250px;
-    }
-  }
-
-  &.mod-url {
-    .cell-text {
-      max-width: 350px;
-    }
-  }
-}
-
-.images-grid {
-  border-bottom: $border-default;
-  border-top: $border-default;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  overflow: auto;
-}
-
-.images-input {
-  background-color: darken($background-color, 10%);
-  border: none;
-  color: white;
-  font-size: 1em;
-  line-height: 1.5em;
-  margin: 0;
-  min-height: 20vh;
-  padding: 10px;
-  resize: none;
-  width: 100%;
-  border-radius: $border-radius;
-
-  &:focus {
-    outline: none;
-  }
-}
-
 .modal {
   background-color: $tile-background-color;
   border-radius: 6px;
@@ -118,7 +44,7 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 0;
-  padding: 20px;
+  padding: 20px 20px 20px 30px;
 }
 
 .modal-footer {
@@ -156,30 +82,32 @@
 }
 
 .settings-group {
+  display: flex;
   flex: 1;
+  width: 45vw;
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 
   &.mod-grid {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
     min-height: 0;
   }
 
-  &.mod-input {
-    display: flex;
-  }
-
   &.mod-other {
-    margin-top: 10px;
+    flex-direction: column;
 
     .input-container {
       &.mod-sorted {
         width: 250px;
       }
     }
+  }
 
-    .label {
-      width: 130px;
-    }
+  .label {
+    min-width: $label-width;
+    padding: 10px 0;
+    white-space: normal;
+    width: $label-width;
   }
 }
