Extract SettingsButton and SettingsModal from Settings

--- a/src/main/src/app/settings/imagesJson.scss
+++ b/src/main/src/app/settings/imagesJson.scss
@@ -1,6 +1,6 @@
 @import '../variables.scss';
 
-.images-input {
+.images-json {
   background-color: darken($background-color, 10%);
   border: none;
   color: white;
