wip settings tabs

--- a/src/main/src/app/layout/button.scss
+++ b/src/main/src/app/layout/button.scss
@@ -53,7 +53,7 @@
   &.mod-primary {
     color: white;
     background-color: $button-primary-color;
-    border: $border-height solid $button-primary-border-color;
+    border: $border-weight solid $button-primary-border-color;
 
     &:not(.mod-disabled) {
       &:hover {
