--- a/src/main/src/app/settings/imagesJson.scss
+++ b/src/main/src/app/settings/imagesJson.scss
@@ -7,10 +7,10 @@
   font-size: 1em;
   line-height: 1.5em;
   margin: 0;
-  min-height: 20vh;
+  height: calc(#{$settings-tab-height} - 20px);
   padding: 10px;
   resize: none;
-  width: 100%;
+  width: calc(100% - 20px);
   border-radius: $border-radius;
 
   &:focus {
