--- a/src/main/src/app/settings/settingsModal.scss
+++ b/src/main/src/app/settings/settingsModal.scss
@@ -8,12 +8,13 @@
   justify-content: space-between;
   left: 50%;
   max-height: 80vh;
-  max-width: 80vw;
+  max-width: 900px;
   min-height: 80vh;
-  min-width: 50vw;
+  min-width: 400px;
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
+  width: 70vw;
   z-index: 1010;
 }
 
@@ -22,7 +23,7 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 0;
-  padding: 20px 20px 20px 30px;
+  padding: 20px 30px 20px;
 }
 
 .modal-footer {
@@ -62,15 +63,14 @@
 .settings-group {
   display: flex;
   flex: 1;
-  width: 45vw;
 
   &:not(:last-child) {
     margin-bottom: 20px;
   }
 
-  &.mod-grid {
-    min-height: 0;
-  }
+  // &.mod-grid {
+  //   min-height: 0;
+  // }
 
   &.mod-other {
     flex-direction: column;
@@ -83,9 +83,17 @@
   }
 
   .label {
-    min-width: $label-width;
-    padding: 10px 0;
-    white-space: normal;
-    width: $label-width;
+    &:not(.mod-tab) {
+      min-width: $label-width;
+      padding: 10px 0;
+      white-space: normal;
+      width: $label-width;
+    }
+  }
+
+  .tabs-container {
+    .tab-body {
+      height: $settings-tab-height;
+    }
   }
 }
