--- a/src/main/src/app/settings/imagesGrid.scss
+++ b/src/main/src/app/settings/imagesGrid.scss
@@ -3,9 +3,10 @@
 .cell {
   align-items: center;
   display: flex;
+  flex: 1;
   padding: 6px 10px;
 
-  &.mod-text {
+  &.mod-image {
     background-color: transparent;
     border-color: transparent;
     border-radius: 0;
@@ -20,8 +21,8 @@
     }
   }
 
-  &.mod-even {
-    background-color: $row-even-color;
+  &.mod-title {
+    overflow: hidden;
   }
 }
 
@@ -48,7 +49,17 @@
 .images-grid {
   border-bottom: $border-default;
   border-top: $border-default;
-  display: grid;
-  grid-template-columns: repeat(2, 50%);
+  display: flex;
+  flex-direction: column;
   overflow: auto;
+  height: $settings-tab-height;
+}
+
+.images-row {
+  align-items: center;
+  display: flex;
+
+  &.mod-even {
+    background-color: $row-even-color;
+  }
 }
