--- a/src/main/src/app/settings/settingsModal.scss
+++ b/src/main/src/app/settings/settingsModal.scss
@@ -7,10 +7,9 @@
   flex-direction: column;
   justify-content: space-between;
   left: 50%;
-  max-height: 80vh;
   max-width: 900px;
-  min-height: 80vh;
   min-width: 400px;
+  padding: 25px;
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -23,25 +22,23 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 0;
-  padding: 20px 30px 20px;
+  margin-bottom: 40px;
 }
 
 .modal-footer {
   align-items: center;
   display: flex;
   justify-content: space-between;
-  padding: 20px;
 }
 
 .modal-header {
   align-items: center;
   display: flex;
   justify-content: space-between;
-  padding: 18px 20px 0;
+  margin-bottom: 65px;
 
   .label-title {
     margin: 0;
-    padding: 10px 0 0;
   }
 }
 
@@ -67,10 +64,6 @@
   &:not(:last-child) {
     margin-bottom: 20px;
   }
-
-  // &.mod-grid {
-  //   min-height: 0;
-  // }
 
   &.mod-other {
     flex-direction: column;
