--- a/src/main/src/app/layout/tabs.scss
+++ b/src/main/src/app/layout/tabs.scss
@@ -20,6 +20,7 @@
   display: flex;
   height: $row-height;
   justify-content: center;
+  transition: $util-transition;
 
   &.mod-active {
     border: $border-default;
