--- a/src/main/src/app/settings/imagesList.scss
+++ b/src/main/src/app/settings/imagesList.scss
@@ -35,7 +35,7 @@
   }
 }
 
-.images-grid-container {
+.images-list-container {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -46,13 +46,17 @@
   }
 }
 
-.images-grid {
+.images-list {
   border-bottom: $border-default;
   border-top: $border-default;
   display: flex;
   flex-direction: column;
   overflow: auto;
-  height: $settings-tab-height;
+  height: calc(#{$settings-tab-height} - #{$row-height} - 20px);
+}
+
+.images-list-filter {
+  margin-bottom: 20px;
 }
 
 .images-row {
