--- a/src/main/src/app/variables.scss
+++ b/src/main/src/app/variables.scss
@@ -13,7 +13,9 @@ $button-primary-border-color: darken(#408BF9, 20%);
 $button-primary-color: #408BF9;
 $button-width: 120px;
 
-$font-icon-size: 1.5em;
+$icon-size: 1.5em;
+$icon-color-disabled: lighten(#878787, 20%);
+$icon-color-danger: red;
 
 $label-color: black;
 $label-subtext-color: #878787;
