--- a/src/main/src/app/settings/imagesList.scss
+++ b/src/main/src/app/settings/imagesList.scss
@@ -31,7 +31,7 @@
 
   &.mod-subtext {
     color: $label-subtext-color;
-    margin-left: 10px;
+    margin-left: 20px;
   }
 }
 
@@ -56,14 +56,36 @@
 }
 
 .images-list-filter {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+}
+
+.images-list-header {
+  align-items: center;
+  color: $label-subtext-color;
+  display: flex;
+  padding: 6px 0;
+
+  .cell {
+    &.has-input {
+      margin-left: 20px;
+    }
+  }
 }
 
 .images-row {
   align-items: center;
   display: flex;
+  width: 100%;
 
   &.mod-even {
     background-color: $row-even-color;
+
+    .input-icon {
+      background-color: $row-even-color;
+    }
+  }
+
+  .input-icon {
+    background-color: white;
   }
 }
