--- a/src/main/src/app/variables.scss
+++ b/src/main/src/app/variables.scss
@@ -21,7 +21,7 @@ $label-color: black;
 $label-subtext-color: #878787;
 $label-width: 120px;
 
-$row-auto-scrolled-color: lighten(yellow, 45%);
+$row-auto-scrolled-color: lighten(#408BF9, 32%);
 $row-even-color: lighten($border-color, 10%);
 $row-height: 38px;
 
